js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
do
{
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
}
while
(
false
)
;
